manifests_old/webhook-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: porkbun-webhook
  namespace: cert-manager
spec:
  replicas: 1
  selector:
    matchLabels:
      app: porkbun-webhook
  template:
    metadata:
      labels:
        app: porkbun-webhook
    spec:
      serviceAccountName: porkbun-webhook
      containers:
      - name: webhook
        imagePullPolicy: IfNotPresent
        image: porkbun-webhook:latest
        ports:
        - containerPort: 443
        volumeMounts:
        - name: tls
          mountPath: /tls
          readOnly: true
      volumes:
      - name: tls
        secret:
          secretName: porkbun-webhook-tls
