manifests_old/webhook-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: porkbun-webhook
  namespace: cert-manager
spec:
  ports:
  - port: 443
    targetPort: 443
  selector: 
    app: porkbun-webhook
