manifests_old/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: porkbun-issuer
spec:
  tls:
  - hosts:
    - test.noah-hood.io
    secretName: test-noah-hood-tls
  rules:
  - host: test.noah-hood.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx
            port:
              number: 80
